--- a/compte.html
+++ b/compte.html
@@ -9,8 +9,13 @@
 <body>
 
 
-
-	 <nav>
+  <div class="wrapper">
+    <header>
+      <h1>SPORTIFY : Consultation Sportive</h1>
+      <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;"/>
+      <div class="line"></div>
+    </header>
+    <nav>
       <ul>
         <li><a href="accueil.html">Accueil</a></li>
         <li><a href="parcourir.html">Tout Parcourir</a></li>
@@ -18,12 +23,22 @@
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
       </ul>
-    </nav>
+    </nav> 
+  </div>
+	 
     <div>
-    	<p>VOTRE COMPTE</p>
+          	<p>VOTRE COMPTE</p>
 
+            <!-- page1.php -->
+        <form action="page_mdp.php" method="post">
+          <label for="username">Identifiant :</label>
+          <input type="text" name="username" id="username" required><br>
 
+          <label for="password">Mot de passe :</label>
+          <input type="password" name="password" id="password" required><br>
 
+          <input type="submit" value="Se connecter">
+        </form>
     </div>
 
 </body>
