--- a/parcourir.html
+++ b/parcourir.html
@@ -10,7 +10,13 @@
 
 
 
-	 <nav>
+	 <div class="wrapper">
+    <header>
+      <h1>SPORTIFY : Consultation Sportive</h1>
+      <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;"/>
+      <div class="line"></div>
+    </header>
+    <nav>
       <ul>
         <li><a href="accueil.html">Accueil</a></li>
         <li><a href="parcourir.html">Tout Parcourir</a></li>
@@ -18,9 +24,18 @@
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
       </ul>
-    </nav>
+    </nav> 
+  </div>
     <div>
     	<p>DECOUVREZ NOUS EN PARCOURANT NOTRE SITE</p>
+
+      <nav>
+      <ul>
+        <li><a href="evenements.html">EVENEMENTS</a></li>
+        <li><a href="salle_sport.html">SALLE DE SPORT</a></li>
+        <li><a href="sport.html">SPORTS ENSEIGNES</a></li>
+      </ul>
+    </nav>
 
 
 
