--- a/parcourir.html
+++ b/parcourir.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>PARCOURIR</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
-
-	 <div class="wrapper">
+	
+	<div class="wrapper">
     <header>
       <h1>SPORTIFY : Consultation Sportive</h1>
       <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;"/>
       <div class="line"></div>
     </header>
+		
     <nav>
       <ul>
         <li><a href="accueil.html">Accueil</a></li>
@@ -26,9 +23,8 @@
       </ul>
     </nav> 
   </div>
-    <div>
-    	<p>DECOUVREZ NOUS EN PARCOURANT NOTRE SITE</p>
-
+	
+    <div><p>DECOUVREZ NOUS EN PARCOURANT NOTRE SITE</p>
       <nav>
       <ul>
         <li><a href="evenements.html">EVENEMENTS</a></li>
@@ -36,9 +32,6 @@
         <li><a href="sport.html">SPORTS ENSEIGNES</a></li>
       </ul>
     </nav>
-
-
-
     </div>
 
 </body>
