--- a/rendez_vous.html
+++ b/rendez_vous.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>RENDEZ VOUS</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
-
+	
 	 <div class="wrapper">
     <header>
       <h1>SPORTIFY : Consultation Sportive</h1>
       <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;"/>
       <div class="line"></div>
     </header>
+		 
     <nav>
       <ul>
         <li><a href="accueil.html">Accueil</a></li>
@@ -26,12 +23,9 @@
       </ul>
     </nav> 
   </div>
-    <div>
-    	<p>PRENEZ RENDEZ VOUS</p>
-
-
-
-    </div>
+	
+    <div><p>PRENEZ RENDEZ VOUS</p>
+	</div>
 
 </body>
 </html>
