--- a/accueil.html
+++ b/accueil.html
@@ -8,7 +8,9 @@
 	<div class="wrapper">
 	<header>
       <h1>SPORTIFY : Consultation Sportive</h1>
-      <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;"/>
+      <a href="Page_accueil.html">
+        <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;">
+      </a>
       <div class="line"></div>
     </header>
 		
