--- a/compte.html
+++ b/compte.html
@@ -11,7 +11,8 @@
       <h1>SPORTIFY : Consultation Sportive</h1>
 	<a href="Page_accueil.html">
         <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;">
-      </a>      <div class="line"></div>
+      </a>      
+	<div class="line"></div>
     </header>
 	  
     <nav>
