--- a/Page_accueil.html
+++ b/Page_accueil.html
@@ -10,9 +10,14 @@
   <div class="wrapper"> 
 
     <header>
-      <h1>SPORTIFY : Consultation Sportive</h1>
-      <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;"/>
-      <div class="line"></div>
+      <h1><br>SPORTIFY : Consultation Sportive</h1>
+      <a href="Page_accueil.html">
+        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border: 2px solid black; border-radius: 10px;">
+          <br>
+      </a>
+
+      <div class="line" style="height: 3px; background-color: darkblue;"></div>
+      <br>
     </header>
 
     <nav>
@@ -22,18 +27,24 @@
         <li><a href="recherche.html">Recherche</a></li>
         <li><a href="rendezvous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
-      </ul>
-      <div class="line"></div>
+      </ul><br>
+      <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
     </nav>
 
-    <section><p>Ecrire un truc sur EVENEMENT DE LA SEMAINE<br>Mettre images des spécialistes...</p></section>
+    <section>
+      <h1 style="text-align: center;">EVENEMENT DE LA SEMAINE</h1><br>
+      Cette semaine, tout comme chaque dernière semaine du mois, nous proposons une rencontre entre coachs, administrateurs et visiteurs via une partie de paintball. Coachs et adiminstrateurs seront dans l'équipe bleue contre les visiteurs en équipe rouge. Une petite pause au bar sera organisée juste après le paintball, histoire de discuter plus sérieusement qu'en se tirant dessus. Alors venez vous amuser, tout est gratuit pour les 9 élus qui seront tirés au sort. Contactez nous par mail pour vous inscrire au tirage. A vos marques, prêts, tirez !!!!
+      <figure style="text-align: center;">
+        <img src="paintball.png" width="500" height="375" align="center" style="border: 2px solid black;">
+      </figure>
+    </section>
 
     <footer class="footer">
-      <p>Nous contacter :<br><u>+33 6 61 48 19 96</u>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp; 
+      <p1>Nous contacter :<br><u>+33 6 61 48 19 96</u>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp; 
         <a href="mailto:xavier.heitz@edu.ece.fr">xavier.heitz@edu.ece.fr</a>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;
         <a href="https://maps.google.com/maps?q=66 rue des Champarons, 92700, Colombes" target="_blank">
         66 rue des Champarons, 92700, Colombes</a><br>
-        &copy;2023 Sportify</p>
+        &copy;2023 Sportify</p1>
     </footer>
 
   </div>
