--- a/accueil.html
+++ b/accueil.html
@@ -4,14 +4,18 @@
 	<title>ACCUEIL</title>
 	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 	<div class="wrapper">
-	<header>
-      <h1>SPORTIFY : Consultation Sportive</h1>
+	
+  <header>
+      <h1><br>SPORTIFY : Consultation Sportive</h1>
       <a href="Page_accueil.html">
-        <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;">
+        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border: 2px solid black; border-radius: 10px;">
+          <br>
       </a>
-      <div class="line"></div>
+      <div class="line" style="height: 3px; background-color: darkblue;"></div>
+      <br>
     </header>
 		
     <nav>
@@ -23,10 +27,8 @@
         <li><a href="compte.html">Votre Compte</a></li>
       </ul>
     </nav> 
-  </div>
-	
-    <div>
-    	<p>Acceuil Bienvenue chez sprotify</p>
+
+    <p>Accueil Bienvenue chez sportify</p>
     </div>
 
 </body>
