--- a/compte.html
+++ b/compte.html
@@ -4,18 +4,21 @@
 	<title>COMPTE</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-  <div class="wrapper">
+<body>
+  <div class="wrapper"> 
+
     <header>
-      <h1>SPORTIFY : Consultation Sportive</h1>
-	<a href="Page_accueil.html">
-        <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;">
-      </a>      
-	<div class="line"></div>
+      <h1><br>SPORTIFY : Consultation Sportive</h1>
+      <a href="Page_accueil.html">
+        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border: 2px solid black; border-radius: 10px;">
+          <br>
+      </a>
+      <div class="line" style="height: 3px; background-color: darkblue;"></div>
+      <br>
     </header>
-	  
-    <nav>
+
+	 <nav>
       <ul>
         <li><a href="accueil.html">Accueil</a></li>
         <li><a href="parcourir.html">Tout Parcourir</a></li>
@@ -23,18 +26,8 @@
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
       </ul>
-    </nav> 
-  </div>
-	 
-    <div>
-          <p>VOTRE COMPTE</p>
-        <form action="page_mdp.php" method="post">
-          <label for="username">Identifiant :</label>
-          <input type="text" name="username" id="username" required><br>
-          <label for="password">Mot de passe :</label>
-          <input type="password" name="password" id="password" required><br>
-          <input type="submit" value="Se connecter">
-        </form>
+    </nav>
+  	<p>VOTRE COMPTE</p>
     </div>
 
 </body>
