--- a/parcourir.html
+++ b/parcourir.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <head>
-	<meta charset="utf-8">
-	<title>PARCOURIR</title>
-	<link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <title>PARCOURIR</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	
-	<div class="wrapper">
+
+   <div class="wrapper">
     <header>
-      <h1>SPORTIFY : Consultation Sportive</h1>
-	<a href="Page_accueil.html">
-        <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;">
+      <h1><br>SPORTIFY : Consultation Sportive</h1>
+      <a href="Page_accueil.html">
+        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border: 2px solid black; border-radius: 10px;">
+          <br>
       </a>
-	  <div class="line"></div>
+      <div class="line" style="height: 3px; background-color: darkblue;"></div>
+      <br>
     </header>
-		
+
     <nav>
       <ul>
         <li><a href="accueil.html">Accueil</a></li>
@@ -24,10 +27,9 @@
         <li><a href="compte.html">Votre Compte</a></li>
       </ul>
     </nav> 
-  </div>
-	
-    <div><p>DECOUVREZ NOUS EN PARCOURANT NOTRE SITE</p>
-      <nav>
+
+    <p>DECOUVREZ NOUS EN PARCOURANT NOTRE SITE</p>
+    <nav>
       <ul>
         <li><a href="evenements.html">EVENEMENTS</a></li>
         <li><a href="salle_sport.html">SALLE DE SPORT</a></li>
