--- a/rendez_vous.html
+++ b/rendez_vous.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8">
-	<title>RENDEZ VOUS</title>
+	<title>RENDEZ-VOUS</title>
 	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	
-	 <div class="wrapper">
+  <div class="wrapper"> 
+
     <header>
-      <h1>SPORTIFY : Consultation Sportive</h1>
-	<a href="Page_accueil.html">
-        <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;">
+      <h1><br>SPORTIFY : Consultation Sportive</h1>
+      <a href="Page_accueil.html">
+        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border: 2px solid black; border-radius: 10px;">
+          <br>
       </a>
-	<div class="line"></div>
+      <div class="line" style="height: 3px; background-color: darkblue;"></div>
+      <br>
     </header>
-		 
-    <nav>
+
+   <nav>
       <ul>
         <li><a href="accueil.html">Accueil</a></li>
         <li><a href="parcourir.html">Tout Parcourir</a></li>
@@ -23,11 +26,9 @@
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
       </ul>
-    </nav> 
+    </nav>
+    <p>PRENEZ RENDEZ VOUS</p>
   </div>
-	
-    <div><p>PRENEZ RENDEZ VOUS</p>
-	</div>
 
 </body>
 </html>
