--- a/Page_accueil.html
+++ b/Page_accueil.html
@@ -23,7 +23,7 @@
         <li><a href="accueil.html">Accueil</a></li>
         <li><a href="parcourir.html">Tout Parcourir</a></li>
         <li><a href="recherche.html">Recherche</a></li>
-        <li><a href="rendezvous.html">Rendez-vous</a></li>
+        <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
       </ul><br>
       <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
