--- a/accueil.html
+++ b/accueil.html
@@ -25,8 +25,9 @@
         <li><a href="recherche.html">Recherche</a></li>
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
-      </ul>
-    </nav> 
+      </ul><br>
+      <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
+    </nav>
 
     <p>Accueil Bienvenue chez sportify</p>
     </div>
