--- a/compte.html
+++ b/compte.html
@@ -25,7 +25,8 @@
         <li><a href="recherche.html">Recherche</a></li>
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
-      </ul>
+      </ul><br>
+      <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
     </nav>
   	<p>VOTRE COMPTE</p>
     </div>
