--- a/parcourir.html
+++ b/parcourir.html
@@ -7,8 +7,8 @@
 
 <body>
 
-   <div class="wrapper">
-    <header>
+    <div class="wrapper"> 
+   <header>
       <h1><br>SPORTIFY : Consultation Sportive</h1>
       <a href="Page_accueil.html">
         <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border: 2px solid black; border-radius: 10px;">
@@ -25,8 +25,9 @@
         <li><a href="recherche.html">Recherche</a></li>
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
-      </ul>
-    </nav> 
+      </ul><br>
+      <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
+    </nav>
 
     <p>DECOUVREZ NOUS EN PARCOURANT NOTRE SITE</p>
     <nav>
