--- a/compte.html
+++ b/compte.html
@@ -29,6 +29,17 @@
       <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
     </nav>
   	<p>VOTRE COMPTE</p>
+    <form action="page_mdp.php" method="post">
+      <label for="username">Identifiant :</label>
+      <input type="text" name="username" id="username" required ><br>
+
+      <label for="password">Mot de passe :</label>
+      <input type="password" name="password" id="password" required><br>
+
+      <input type="submit" value="Se connecter">
+    </form>
+
+
     </div>
 
 </body>
