--- a/evenements.html
+++ b/evenements.html
@@ -17,6 +17,7 @@
 	      <div class="line" style="height: 3px; background-color: darkblue;"></div>
 	      <br>
 	    </header>
+
 	    <nav>
 	      <ul>
 	        <li><a href="accueil.html">Accueil</a></li>
@@ -28,8 +29,28 @@
 	      <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
 	    </nav>
 
+	    <p>DECOUVREZ NOUS EN PARCOURANT NOTRE SITE</p>
+	    <nav>
+	      <ul>
+	        <li><a href="evenements.html">EVENEMENTS</a></li>
+	        <li><a href="salle_sport.html">SALLE DE SPORT</a></li>
+	        <li><a href="sport.html">SPORTS ENSEIGNES</a></li>
+	      </ul>
+	    </nav>
+	    <br><div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
+	    <h2>EVENEMENTS</h2><br><br>
 		<p>Découvrez votre potentiel sportif et plongez dans l'action avec nos activités palpitantes ! Rejoignez-nous pour une aventure intense, que vous soyez fan de rugby, amateur de wakeboard, amateur de sensations fortes dans un parc aquatique ou passionné de crossfit. Repoussez vos limites, renforcez votre corps et vivez des moments inoubliables avec notre équipe d'experts passionnés. Quelle que soit votre niveau, que vous soyez débutant ou athlète chevronné, nos activités sportives vous aideront à développer votre force, votre endurance et votre agilité tout en vous amusant. Relevez le défi, rejoignez notre communauté dynamique et vivez l'excitation d'une vie active et énergisante. Préparez-vous à ressentir l'adrénaline et à vous surpasser dans un environnement stimulant. Rejoignez-nous dès maintenant et faites partie de l'aventure sportive ultime !<br>
 		</p>
+
+		<br><br>
+    <footer class="footer">
+      <p1>Nous contacter :<br><u>+33 6 61 48 19 96</u>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp; 
+        <a href="mailto:xavier.heitz@edu.ece.fr">xavier.heitz@edu.ece.fr</a>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;
+        <a href="https://maps.google.com/maps?q=66 rue des Champarons, 92700, Colombes" target="_blank">
+        66 rue des Champarons, 92700, Colombes</a><br>
+        &copy;2023 Sportify</p1>
+    </footer>
+
 		</div>
 </body>
 </html>
