--- a/parcourir.html
+++ b/parcourir.html
@@ -37,6 +37,16 @@
         <li><a href="sport.html">SPORTS ENSEIGNES</a></li>
       </ul>
     </nav>
+
+    <br><br>
+    <footer class="footer">
+      <p1>Nous contacter :<br><u>+33 6 61 48 19 96</u>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp; 
+        <a href="mailto:xavier.heitz@edu.ece.fr">xavier.heitz@edu.ece.fr</a>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;
+        <a href="https://maps.google.com/maps?q=66 rue des Champarons, 92700, Colombes" target="_blank">
+        66 rue des Champarons, 92700, Colombes</a><br>
+        &copy;2023 Sportify</p1>
+    </footer>
+
     </div>
 
 </body>
