--- a/Page_accueil.html
+++ b/Page_accueil.html
@@ -11,21 +11,20 @@
     <header>
       <h1><br>SPORTIFY : Consultation Sportive</h1>
       <a href="Page_accueil.html">
-        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border: 2px solid black; border-radius: 10px;">
+        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border-radius: 10px;">
           <br>
       </a>
       <div class="line" style="height: 3px; background-color: darkblue;"></div>
-      <br>
+      <br><br>
     </header>
 
     <nav>
-      <ul>
         <li><a href="accueil.html">Accueil</a></li>
         <li><a href="parcourir.html">Tout Parcourir</a></li>
         <li><a href="recherche.html">Recherche</a></li>
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
-      </ul><br>
+      <br><br><br>
       <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
     </nav>
 
@@ -33,7 +32,7 @@
       <h1 style="text-align: center;">EVENEMENT DE LA SEMAINE</h1><br>
       Cette semaine, tout comme chaque dernière semaine du mois, nous proposons une rencontre entre coachs, administrateurs et visiteurs via une partie de paintball. Coachs et adiminstrateurs seront dans l'équipe bleue contre les visiteurs en équipe rouge. Une petite pause au bar sera organisée juste après le paintball, histoire de discuter plus sérieusement qu'en se tirant dessus. Alors venez vous amuser, tout est gratuit pour les 9 élus qui seront tirés au sort. Contactez nous par mail pour vous inscrire au tirage. A vos marques, prêts, tirez !!!!
       <figure style="text-align: center;">
-        <img src="paintball.png" width="500" height="375" align="center" style="border: 2px solid black;">
+        <img src="paintball.png" width="500" height="375" align="center">
       </figure>
     </section>
 
