--- a/parcourir.html
+++ b/parcourir.html
@@ -11,33 +11,29 @@
    <header>
       <h1><br>SPORTIFY : Consultation Sportive</h1>
       <a href="Page_accueil.html">
-        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border: 2px solid black; border-radius: 10px;">
+        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border-radius: 10px;">
           <br>
       </a>
       <div class="line" style="height: 3px; background-color: darkblue;"></div>
-      <br>
+      <br><br>
     </header>
 
     <nav>
-      <ul>
         <li><a href="accueil.html">Accueil</a></li>
         <li><a href="parcourir.html">Tout Parcourir</a></li>
         <li><a href="recherche.html">Recherche</a></li>
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
-      </ul><br>
+      <br><br><br>
       <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
     </nav>
 
     <p>DECOUVREZ NOUS EN PARCOURANT NOTRE SITE</p>
-    <nav>
-      <ul>
-        <li><a href="evenements.html">EVENEMENTS</a></li>
-        <li><a href="salle_sport.html">SALLE DE SPORT</a></li>
-        <li><a href="sport.html">SPORTS ENSEIGNES</a></li>
-      </ul>
-    </nav>
-
+    <br><nav>
+        <li><a href="activites_sport.html">ACTIVITES SPORTIVES</a></li>
+        <li><a href="sports_compet.html">LES SPORTS DE COMPETITION</a></li>
+        <li><a href="salle_sport.html">SALLE DE SPORT OMNES</a></li>
+    </nav><br>
     <br><br>
     <footer class="footer">
       <p1>Nous contacter :<br><u>+33 6 61 48 19 96</u>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp; 
