--- a/salle_sport.html
+++ b/salle_sport.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
-<html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SALLE DE SPORT</title>
 	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 	 <div class="wrapper">
 	    <header>
 	      <h1><br>SPORTIFY : Consultation Sportive</h1>
 	      <a href="Page_accueil.html">
-	        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border: 2px solid black; border-radius: 10px;">
+	        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border-radius: 10px;">
 	          <br>
 	      </a>
 	      <div class="line" style="height: 3px; background-color: darkblue;"></div>
-	      <br>
+	      <br><br>
 	    </header>
 
 	    <nav>
-	      <ul>
 	        <li><a href="accueil.html">Accueil</a></li>
 	        <li><a href="parcourir.html">Tout Parcourir</a></li>
 	        <li><a href="recherche.html">Recherche</a></li>
 	        <li><a href="rendez_vous.html">Rendez-vous</a></li>
 	        <li><a href="compte.html">Votre Compte</a></li>
-	      </ul><br>
+	      <br><br><br>
 	      <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
 	    </nav>
 
 	    <p>DECOUVREZ NOUS EN PARCOURANT NOTRE SITE</p>
-	    <nav>
-	      <ul>
-	        <li><a href="evenements.html">EVENEMENTS</a></li>
-	        <li><a href="salle_sport.html">SALLE DE SPORT</a></li>
-	        <li><a href="sport.html">SPORTS ENSEIGNES</a></li>
-	      </ul>
-	    </nav>
+	    <br><nav>
+	        <li><a href="activites_sport.html">ACTIVITES SPORTIVES</a></li>
+	        <li><a href="sports_compet.html">LES SPORTS DE COMPETITION</a></li>
+	        <li><a href="salle_sport.html">SALLE DE SPORT OMNES</a></li>
+	    </nav><br>
 	    <br><div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
-	    	<h2>NOTRE SALLE DE SPORT</h2>
-	    	<br><br><h3>TRACTIONS</h3>
-		  	 <figure style="text-align: center">
-				<img class="centered" src="traction.png"  width="450" height="300" style="border: 5px solid black;"/>	
-			</figure>
+	    	<h2>NOTRE SALLE DE SPORT</h2><br><br>
 
-		  	<p> D'un point de vue sportif, les tractions sont un exercice physique polyvalent qui sollicite principalement les muscles du dos, des épaules et des bras. Elles servent à renforcer la musculature du haut du corps, améliorer la stabilité et la posture, et développer la force fonctionnelle. Voici quelques-uns des principaux bénéfices des tractions :<br>
+
+	    	<div class="titre-volet" onclick="ouvrirVolet('tractions')">
+	    		<h3>TRACTIONS</h3>
+			</div>
+		  <div class="volet" id="tractions">
+		    <div class="contenu-volet">
+		    	<figure style="text-align: center">
+					<img class="centered" src="traction.png"  width="450" height="300"/>
+				</figure>
+		      <p style ="text-align: justify;"> D'un point de vue sportif, les tractions sont un exercice physique polyvalent qui sollicite principalement les muscles du dos, des épaules et des bras. Elles servent à renforcer la musculature du haut du corps, améliorer la stabilité et la posture, et développer la force fonctionnelle. Voici quelques-uns des principaux bénéfices des tractions :<br><br>
 
 			1. Renforcement musculaire : Les tractions ciblent principalement les muscles du dos, notamment le grand dorsal, les trapèzes, les rhomboïdes et les muscles des bras comme les biceps et les avant-bras. En effectuant cet exercice régulièrement, vous pouvez développer une musculature dorsale plus forte et plus définie.<br>
 
@@ -55,16 +56,20 @@
 
 			4. Augmentation de la puissance du haut du corps : En raison de l'implication de plusieurs muscles majeurs, les tractions sont un excellent exercice pour développer la puissance du haut du corps. La capacité de tirer son propre poids vers le haut exige un effort important, ce qui peut conduire à une amélioration de la force et de la puissance musculaire.<br>
 
-			5. Défi physique et mental : Les tractions sont un exercice exigeant qui nécessite force, endurance et coordination. Les maîtriser et augmenter progressivement le nombre de répétitions peut être un défi stimulant tant sur le plan physique que mental. Cela peut vous aider à développer la discipline, la persévérance et la confiance en vous.<br>
+			5. Défi physique et mental : Les tractions sont un exercice exigeant qui nécessite force, endurance et coordination. Les maîtriser et augmenter progressivement le nombre de répétitions peut être un défi stimulant tant sur le plan physique que mental. Cela peut vous aider à développer la discipline, la persévérance et la confiance en vous.<br><br>
 
-			Il convient de noter que les tractions peuvent être adaptées en fonction de votre niveau de condition physique. Si vous êtes débutant, vous pouvez commencer par des variantes plus faciles, telles que les tractions assistées avec une bande élastique ou en utilisant une machine d'assistance. Avec le temps et la pratique, vous pourrez progresser vers des tractions complètes non assistées.</p>
+			Il convient de noter que les tractions peuvent être adaptées en fonction de votre niveau de condition physique. Si vous êtes débutant, vous pouvez commencer par des variantes plus faciles, telles que les tractions assistées avec une bande élastique ou en utilisant une machine d'assistance. Avec le temps et la pratique, vous pourrez progresser vers des tractions complètes non assistées.</p></div></div>
 
 
-		    <br><br><h3>RAMEURS</h3>
-		    <figure style="text-align: center">
-				<img class="centered"src="rameur.png"  width="450" height="300" style="border: 5px solid black;"/>	
-			</figure>
-		    <p>D'un point de vue sportif, les exercices de rameur, également connus sous le nom de rowing, sont des mouvements qui sollicitent principalement les muscles du dos, des épaules, des bras et des jambes. Ils sont souvent utilisés comme exercices de renforcement musculaire et de cardio-training. Voici à quoi ils servent et comment effectuer le mouvement :<br>
+		  	<div class="titre-volet" onclick="ouvrirVolet('rameurs')">
+	    		<h3>RAMEURS</h3>
+			</div>
+		  <div class="volet" id="rameurs">
+		    <div class="contenu-volet">
+		    	<figure style="text-align: center">
+					<img class="centered" src="rameur.png"  width="450" height="300"/>
+				</figure>
+		    <p style ="text-align: justify;">D'un point de vue sportif, les exercices de rameur, également connus sous le nom de rowing, sont des mouvements qui sollicitent principalement les muscles du dos, des épaules, des bras et des jambes. Ils sont souvent utilisés comme exercices de renforcement musculaire et de cardio-training. Voici à quoi ils servent et comment effectuer le mouvement :<br><br>
 
 			1. Renforcement musculaire : Les exercices de rameur sont excellents pour renforcer les muscles du dos, notamment le grand dorsal, les trapèzes, les rhomboïdes et les muscles des bras tels que les biceps et les avant-bras. Ils ciblent également les muscles des épaules, des jambes et du tronc. Ces mouvements aident à équilibrer la musculature du haut du corps, ce qui peut améliorer la posture et réduire les risques de déséquilibres musculaires.<br>
 
@@ -84,19 +89,23 @@
 
 			6. Inversez le mouvement en commençant par une extension des bras, puis en inclinant légèrement le torse vers l'avant et en fléchissant les jambes pour revenir à la position de départ.<br>
 
-			7. Répétez le mouvement de manière fluide et continue, en utilisant un rythme contrôlé.<br>
+			7. Répétez le mouvement de manière fluide et continue, en utilisant un rythme contrôlé.<br><br>
 
-			Il est important de maintenir une bonne technique tout au long du mouvement, en évitant de se balancer excessivement avec le corps et en gardant le dos droit. Il est recommandé de commencer avec une charge légère et d'augmenter progressivement l'intensité à mesure que vous maîtrisez le mouvement et renforcez votre condition physique.</p>
+			Il est important de maintenir une bonne technique tout au long du mouvement, en évitant de se balancer excessivement avec le corps et en gardant le dos droit. Il est recommandé de commencer avec une charge légère et d'augmenter progressivement l'intensité à mesure que vous maîtrisez le mouvement et renforcez votre condition physique.</p></div></div>
 
 			
 		     
-		    <br><br><h3>BANCS</h3>
-		    <figure style="text-align: center">
-				<img class="centered"src="bancs.png"  width="450" height="300" style="border: 5px solid black;"/>	
-			</figure>
-
-			<p>
-				Les bancs de salle de sport sont des équipements polyvalents et pratiques qui offrent de nombreux avantages pour les séances d'entraînement. Voici quelques raisons pour lesquelles les bancs de salle de sport sont pratiques :<br>
+		    <div class="titre-volet" onclick="ouvrirVolet('bancs')">
+	    		<h3>BANCS</h3>
+			</div>
+		  <div class="volet" id="bancs">
+		    <div class="contenu-volet">
+		    	<figure style="text-align: center">
+					<img class="centered" src="bancs.png"  width="450" height="300"/>
+				</figure>
+			<p style ="text-align: justify;">
+				Les bancs de salle de sport sont des équipements polyvalents et pratiques qui offrent de nombreux avantages pour les séances d'entraînement. Voici quelques raisons pour lesquelles les bancs de salle de sport sont pratiques :
+				<br><br>
 
 			1. Entraînement de la musculation : Les bancs de salle de sport sont souvent utilisés pour les exercices de musculation. Ils permettent de réaliser une variété d'exercices pour différents groupes musculaires tels que le développé couché, les écartés, le développé militaire, les biceps curl, les triceps dips, les flys, etc. Ces exercices visent à renforcer les muscles du haut du corps, y compris la poitrine, les épaules, les bras et le dos.<br>
 
@@ -106,10 +115,10 @@
 
 			4. Progression et charges supplémentaires : Les bancs de salle de sport permettent une progression de l'entraînement en termes de poids utilisé. Ils sont souvent utilisés en combinaison avec des haltères, des barres de musculation ou des machines de musculation. En augmentant progressivement la charge, il est possible de développer la force et la masse musculaire au fil du temps.<br>
 
-			5. Polyvalence et gain d'espace : Les bancs de salle de sport sont compacts et polyvalents, ce qui en fait des équipements pratiques pour les salles de sport ou même pour un entraînement à domicile. Ils permettent de réaliser une variété d'exercices avec un seul équipement, ce qui économise de l'espace et rend l'entraînement plus efficace.<br>
+			5. Polyvalence et gain d'espace : Les bancs de salle de sport sont compacts et polyvalents, ce qui en fait des équipements pratiques pour les salles de sport ou même pour un entraînement à domicile. Ils permettent de réaliser une variété d'exercices avec un seul équipement, ce qui économise de l'espace et rend l'entraînement plus efficace.<br><br>
 
 			Il est important de noter que l'utilisation des bancs de salle de sport doit être effectuée de manière sûre et avec une bonne technique. Il est recommandé de demander l'aide d'un professionnel de la forme physique pour s'assurer d'une exécution correcte des exercices et de prévenir les blessures.<br>
-			</p>
+			</p></div></div>
 
 	  <br><br>
     <footer class="footer">
@@ -121,6 +130,21 @@
     </footer>
 
   </div>  
+
+  <script>
+    function ouvrirVolet(voletId) {
+      var volet = document.getElementById(voletId);
+      var titreVolet = document.querySelector(".titre-volet");
+
+      if (volet.style.display === "none") {
+        volet.style.display = "block";
+        titreVolet.style.fontWeight = "bold";
+      } else {
+        volet.style.display = "none";
+        titreVolet.style.fontWeight = "normal";
+      }
+    }
+  </script>
 
 </body>
 </html>
