--- a/sports_compet.html
+++ b/sports_compet.html
@@ -47,14 +47,14 @@
   <div class="volet" id="ragnar">
     <div class="contenu-volet">
       <figure style="text-align: center">
-      <img class="centered"src="ragnar.png"  width="450" height="562"/>  
+        <img class="centered"src="ragnar.png"  width="450" height="562"/>  
       </figure>
-      <p>
+      <p style="text-align: justify;">
          RAGNAR BRETON<br><br>
 Professeur de Musculation et MMA | 30 ans<br>
 Adresse : 1 impasse des cerises<br>
-Téléphone : 0620948312<br>
-Email : ragnar@sportomnes.fr<br><br>
+Téléphone : +33620948312<br>
+Email : <a href="mailto:ragnar@sportomnes.fr">ragnar@sportomnes.fr</a><br><br>
 
 PROFIL PROFESSIONNEL<br><br>
 Professeur de musculation et MMA passionné avec une solide expérience dans l'enseignement des techniques de fitness, de renforcement musculaire et de sports de combat. Expert dans la conception de programmes d'entraînement personnalisés, axés sur les objectifs individuels des clients. Bon communicateur et motivé à aider les autres à atteindre leur plein potentiel physique et mental.<br><br>
@@ -86,7 +86,6 @@ COMPÉTENCES<br><br>
 
       </p>
        
-
     </div>
   </div>
 
@@ -96,11 +95,11 @@ COMPÉTENCES<br><br>
       <figure style="text-align: center">
       <img class="centered"src="juju.png"  width="450" height="562"/>  
       </figure>
-      <p>JUJU FITCAT<br><br>
+      <p style="text-align: justify;">JUJU FITCAT<br><br>
 Professeur de CrossFit et Nutritionniste | 26 ans<br>
 Adresse : 123 Rue du Sport, 75000 Paris<br>
 Téléphone : 06 69 74 12 45<br>
-Email : juju.fitcat@gmail.com<br><br>
+Email : <a href="mailto:juju.fitcat@gmail.com">juju.fitcat@gmail.com</a><br><br>
 
 PROFIL PROFESSIONNEL<br><br>
 Professeur de CrossFit et nutritionniste passionné par le fitness et la santé. Expérience dans la conception de programmes d'entraînement intensifs et la fourniture de conseils nutritionnels pour aider les clients à atteindre leurs objectifs de remise en forme. Bon communicateur, motivé à aider les autres à adopter un mode de vie sain et à améliorer leurs performances physiques.<br><br>
