--- a/salle_sport.html
+++ b/salle_sport.html
@@ -37,6 +37,34 @@
 	    <br><div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
 	    	<h2>NOTRE SALLE DE SPORT</h2><br><br>
 
+	    	<h4>Les horaires de la salle :</h4>
+
+	    	<table style="display: flex; justify-content: center; font-size: 22px;">
+				  <tr>
+				    <th>Jour</th>
+				    <td>Lundi</td>
+				    <td>Mardi</td>
+				    <td>Mercredi</td>
+				    <td>Jeudi</td>
+				    <td>Vendredi</td>
+				    <td>Samedi</td>
+				    <td>Dimanche</td>
+				  </tr>
+				  <tr>
+				    <th>Horaires</th>
+				    <td>8h - 20h</td>
+				    <td>8h - 20h</td>
+				    <td>9h - 20h</td>
+				    <td>8h - 20h</td>
+				    <td>8h - 20h</td>
+				    <td>11h - 17h</td>
+				    <td>Fermé</td>
+				  </tr>
+				</table>
+
+
+
+	    	<br><h4>Quelques règles et conseils concernant notre matériel :</h4>
 
 	    	<div class="titre-volet" onclick="ouvrirVolet('tractions')">
 	    		<h3>TRACTIONS</h3>
@@ -119,6 +147,32 @@
 
 			Il est important de noter que l'utilisation des bancs de salle de sport doit être effectuée de manière sûre et avec une bonne technique. Il est recommandé de demander l'aide d'un professionnel de la forme physique pour s'assurer d'une exécution correcte des exercices et de prévenir les blessures.<br>
 			</p></div></div>
+
+			<br><h4>Nos responsables de salle :</h4>
+
+			<div class="coord_gerant">
+			  <div class="nom_gerant">Benoit Traitre</div>
+			  Téléphone : <u>+ 33 7 92 93 23 34</u><br>
+			  Email : 
+			  <a href="mailto:benoit.traitre@gmail.com">benoit.traitre@gmail.com</a>
+			</div>
+
+			<div class="coord_gerant">
+			  <div class="nom_gerant">Hugues Lacroix</div>
+			  <div class="contact-details">Téléphone : <u>+ 33 7 92 93 23 35</u></div>
+			  Email : 
+			  <a href="mailto:hugues.lacroix@gmail.com">hugues.lacroix@gmail.com</a>
+			</div>
+
+			<div class="coord_gerant">
+			  <div class="nom_gerant">François Pepere</div>
+			  <div class="contact-details">Téléphone : <u>+ 33 7 92 93 23 36</u></div>
+				Email : 
+			  <a href="mailto:francois.pepere@gmail.com">francois.pepere@gmail.com</a>
+			</div>
+
+
+
 
 	  <br><br>
     <footer class="footer">
