--- a/recherche.html
+++ b/recherche.html
@@ -17,7 +17,7 @@
 		
     <nav>
       <ul>
-        <li><a href="accueil.html">Accueil</a></li>
+        <li><a href="Page_accueil.html">Accueil</a></li>
         <li><a href="parcourir.html">Tout Parcourir</a></li>
         <li><a href="recherche.html">Recherche</a></li>
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
