--- a/rendez_vous.html
+++ b/rendez_vous.html
@@ -37,8 +37,16 @@
     <select id="coach" name="coach">
       <option value="arnold">Arnold</option>
       <option value="camille">Camille</option>
-      <option value="edouard">Edouard</option>
+      <option value="emilie">Emilie</option>
+      <option value="nicole">Nicole</option>
       <option value="jean">Jean</option>
+      <option value="florent">Florent</option>
+      <option value="sebastien">Sebastien</option>
+      <option value="pierre">Pierre</option>
+      <option value="ragnar">Ragnar</option>
+      <option value="tanguy">Tanguy</option>
+      <option value="romain">Romain</option>
+
     </select>
 
     <label for="date">Date :</label>
@@ -49,9 +57,16 @@
 
     <label for="activite">Activité :</label>
     <select id="activite" name="activite">
-      <option value="tennis">Tennis</option>
-      <option value="basketball">Basketball</option>
+      <option value="muscu">Muscu</option>
+      <option value="biking">Biking</option>
       <option value="fitness">Fitness</option>
+      <option value="cardio_training">Cardio-training</option>
+      <option value="cours_collectif">Cours Collectif</option>
+      <option value="natation">Natation</option>
+      <option value="tennis">Tennis</option>
+      <option value="football">FootBall</option>
+      <option value="basketball">BasketBall</option>
+      <option value="plongeon">Plongeon</option>
     </select>
 
     <input type="submit" value="Envoyer">
