--- a/recherche.html
+++ b/recherche.html
@@ -23,11 +23,25 @@
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
       </ul>
-    </nav> 
+    </nav>
+
+    <form action="/rechercher" method="GET">
+    <input type="text" name="q" placeholder="Rechercher...">
+    <button type="submit">Rechercher</button>
+  </form>
+
+  <br><br>
+    <footer class="footer">
+      <p1>Nous contacter :<br><u>+33 6 61 48 19 96</u>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp; 
+        <a href="mailto:xavier.heitz@edu.ece.fr">xavier.heitz@edu.ece.fr</a>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;
+        <a href="https://maps.google.com/maps?q=66 rue des Champarons, 92700, Colombes" target="_blank">
+        66 rue des Champarons, 92700, Colombes</a><br>
+        &copy;2023 Sportify</p1>
+    </footer>
+
   </div>
 	
-    <div><p>RECHERCHEZ UN COACH POUR VOTRE RDV</p>
-    </div>
+    
 
 </body>
 </html>
