--- a/recherche.html
+++ b/recherche.html
@@ -8,11 +8,13 @@
 	
 	<div class="wrapper">
     <header>
-      <h1>SPORTIFY : Consultation Sportive</h1>
-	<a href="Page_accueil.html">
-        <img src="logo.png" width="120" height="60" style="position: absolute; top: 5%; right: 10%; border: 2px solid black; border-radius: 10px;">
+      <h1><br>SPORTIFY : Consultation Sportive</h1>
+      <a href="Page_accueil.html">
+        <img src="logo.png" width="200" height="100" style="position: absolute; top: 6%; right: 8%; border-radius: 10px;">
+          <br>
       </a>
-	  <div class="line"></div>
+      <div class="line" style="height: 3px; background-color: darkblue;"></div>
+      <br><br>
     </header>
 		
     <nav>
@@ -23,7 +25,10 @@
         <li><a href="rendez_vous.html">Rendez-vous</a></li>
         <li><a href="compte.html">Votre Compte</a></li>
       </ul>
+      <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
     </nav>
+    <p>Faites vos recherches</p><br>
+    
 
     <form action="/rechercher" method="GET">
     <input type="text" name="q" placeholder="Rechercher...">
