--- a/activites_sport.html
+++ b/activites_sport.html
@@ -29,7 +29,7 @@
       <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
     	</nav>
 
-	    <p>NOS ACTIVITES SPORTIVES</p>
+	    <p>DECOUVREZ NOUS EN PARCOURANT NOTRE SITE</p>
 	    <br><nav>
 	        <li><a href="activites_sport.html">ACTIVITES SPORTIVES</a></li>
 	        <li><a href="sports_compet.html">LES SPORTS DE COMPETITION</a></li>
