--- a/activites_sport.html
+++ b/activites_sport.html
@@ -36,7 +36,7 @@
 	        <li><a href="salle_sport.html">SALLE DE SPORT OMNES</a></li>
 	    </nav><br>
 	    <br><div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
-	    <h2>NOS SPORTS DE COMPETITION</h2><br><br>
+	    <h2>NOS ACTIVITES SPORTIVES</h2><br><br>
 		<p style ="text-align: justify;">Vivez l'excitation de la compétition et poussez vos limites avec notre entreprise de sports de compétition de renom. Que vous soyez passionné de basket, de foot, de rugby, de natation, de plongeon ou de tennis, nous offrons une expérience inégalée pour tous les athlètes en herbe. Rejoignez-nous dès maintenant et découvrez un environnement dynamique où la camaraderie et l'adrénaline se rencontrent. Avec nos installations de pointe et nos entraîneurs expérimentés, vous serez soutenu et guidé vers l'excellence sportive. Ne manquez pas l'opportunité de vous mesurer aux meilleurs et de faire partie d'une communauté de compétiteurs dévoués. Inscrivez-vous dès aujourd'hui et préparez-vous à vivre des moments de victoire et de dépassement de soi inoubliables.<br>
 		</p>
 
