--- a/compte.html
+++ b/compte.html
@@ -42,13 +42,13 @@
           Administrateur&nbsp;&nbsp;&nbsp;
       </choix_id>
       <br><br>
-      <label for="username">Identifiant :</label>
+      <label for="username">Nom Prénom :</label>
       <input type="text" name="username" id="username" required><br>
       <br>
-      <label for="password">Mot de passe :</label>
+      <label for="password">Adresse mail :</label>
       <input type="password" name="password" id="password" required><br>
       <br>
-      <input type="submit" value="Se connecter">
+      <a href="compte_coach.php">Se connecter</a>
     </form>
 
 
