--- a/compte.html
+++ b/compte.html
@@ -42,7 +42,10 @@
           Administrateur&nbsp;&nbsp;&nbsp;
       </choix_id>
       <br><br>
-      <label for="username">Nom Prénom :</label>
+      <label for="username">Nom :</label>
+      <input type="text" name="username" id="username" required><br>
+      <br>
+      <label for="username">Prénom :</label>
       <input type="text" name="username" id="username" required><br>
       <br>
       <label for="password">Adresse mail :</label>
