--- a/compte.html
+++ b/compte.html
@@ -29,7 +29,7 @@
 
   	<p>VOTRE COMPTE</p><br><br><br>
 
-    <form method="POST" action="compte_coach.php">
+    <form method="POST" action="compte.php">
       <choix_id style="display: flex; justify-content: center;">
           <input type="radio" name="user_type" value="client" required>Client&nbsp;&nbsp;&nbsp;
           <input type="radio" name="user_type" value="coach" required>Coach&nbsp;&nbsp;&nbsp;
