--- a/ajouter.html
+++ b/ajouter.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>AJOUTER </title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -28,24 +29,21 @@
       <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
     </nav>
 
-    <p>AJOUT D'UNE NOUVELLE PERSONNE</p><br><br><br>
+    <p>AJOUT D'UN COACH </p><br><br><br>
 
     <form method="POST" action="ajouter.php">
       <choix_id style="display: flex; justify-content: center;">
-          <input type="radio" name="user_type" value="client" required>Client&nbsp;&nbsp;&nbsp;
           <input type="radio" name="user_type" value="coach" required>Coach&nbsp;&nbsp;&nbsp;
       </choix_id><br><br>
-
-
-
       <input type="text" name="nom" placeholder="Nom :">
       <input type="text" name="prenom" placeholder="Prenom :">
       <input type="mail" name="mail" placeholder="Mail :">
-      <input type="text" name="mot_de_passe" placeholder="Mot de passe :">
+      <input type="text" name="mdp" placeholder="Mot de passe :">
       <input type="text" name="adresse" placeholder="adresse :">
       <input type="text" name="ville" placeholder="ville :">
       <input type="text" name="pays" placeholder="pays :">
       <input type="text" name="code_postal" placeholder="code_postal :">
+      <input type="text" name="telephone" placeholder="telephone :">
 
       <button type="submit">inscrire</button>
     </form>
