--- a/recherche.html
+++ b/recherche.html
@@ -18,11 +18,13 @@
     </header>
 
    <nav>
-        <li><a href="Page_accueil.html">Accueil</a></li>
-        <li><a href="parcourir.html">Tout Parcourir</a></li>
+        <li><a href="accueil.php">Accueil</a></li>
+        <li><a href="parcourir.php">Tout Parcourir</a></li>
         <li><a href="recherche.html">Recherche</a></li>
-        <li><a href="rendez_vous.html">Rendez-vous</a></li>
-        <li><a href="compte.html">Votre Compte</a></li>
+        <li><a href="rendez_vous.php">Rendez-vous</a></li>
+        <li><a href="compte.php">Votre Compte</a></li>
+        <li><a href="ajouter.php">Inscrire</a></li>
+        <li><a href="supprimer.php">Supprimer</a></li>
       <br><br><br>
       <div class="line" style="height: 4px; background-color: darkblue;"></div><br><br>
     </nav>
